wording and tippos; added cover

--- a/text/URBookMetadata.yaml
+++ b/text/URBookMetadata.yaml
@@ -4,4 +4,5 @@ author: Jan Dittrich
 tags: [Usability, UX, User Research, Requirements]
 abstract: |
   A hands-on guide for finding user needs, motivations and problems
+cover-image: images/urBookCover.svg
 ...
