--- a/text/URBookMetadata.yaml
+++ b/text/URBookMetadata.yaml
@@ -1,8 +1,7 @@
 ---
 title:  'A Beg­inner’s Guide to Finding User Needs'
+subtitle: 'Qualitative research on user motivations, activities and problems'
 author: Jan Dittrich
 tags: [Usability, UX, User Research, Requirements]
-abstract: |
-  A hands-on guide for finding user needs, motivations and problems
 cover-image: images/urBookCover.svg
 ...
