--- a/text/URBookMetadata.yaml
+++ b/text/URBookMetadata.yaml
@@ -1,6 +1,6 @@
 ---
 title:  'A Beg­inner’s Guide to Finding User Needs'
-subtitle: 'Qualitative research on user motivations, activities and problems'
+subtitle: 'Qualitative research on user motivations, activities, and problems'
 author: Jan Dittrich
 tags: [Usability, UX, User Research, Requirements]
 cover-image: images/urBookCover.svg
